# django-vercel-demo

./: README.md  pyproject.toml  requirements.txt  vercel.json
config/: settings.py  wsgi.py
