[tool.poetry]
name = "django-vercel-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_vercel_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
